tests/chapter_15/invalid_parse/invalid_declarator.c
int main(void) {
    int [3] arr  = {1, 2, 3};
    return 0;
}